fixed spacing on cards

--- a/client/src/blackjack/blackjack.css
+++ b/client/src/blackjack/blackjack.css
@@ -128,7 +128,7 @@ html, body, #root {
 	text-align: center;
 	padding: 7px 0px;
 	color: rgb(32, 32, 32);
-	margin: 3px 15px;
+	margin: 3px 35px 3px 0px;
 	border-radius: 5px;
 	border: 2px solid;
 	user-select: none;
